# dragonclaw_project

./: .gitignore  LICENSE  README.md  dragonclaw-spec.md  pyproject.toml
artifacts/: schema.json  training_data.jsonl
docs/: huggingface_model_card.md  huggingface_release.md  pipeline.md  training-env.md
docs/locks/: README.md  pip-freeze.macos.txt
src/dragonclaw/: __init__.py  assistant.py  cli.py  config_apply.py  config_surface.py  configurator.py  diagnostics.py  evaluation.py  fine_tune.py  inference.py  installer.py  io_utils.py  models.py  packaging.py  runtime_cli.py  schema_extractor.py  session_store.py  training_data.py  validator.py
tests/: conftest.py  test_adversarial.py  test_assistant.py  test_config_apply.py  test_config_surface.py  test_config_verification.py  test_error_diagnosis.py  test_permutations.py  test_regression.py  test_runtime_assist_cli.py  test_schema_coverage.py  test_schema_extractor.py  test_verify_config_surface_cli.py
tests/fixtures/: openclaw.schema.json
