[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragonclaw"
version = "0.1.0"
description = "AI-powered OpenClaw installer and training pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DragonClaw Maintainers" }]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
train = [
  "transformers>=4.41",
  "datasets>=2.20",
  "peft>=0.11",
  "accelerate>=0.30",
]
dev = [
  "pytest>=8.2",
]

[project.scripts]
dragonclaw-build = "dragonclaw.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
